--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -1,37 +1,65 @@
 {% extends 'mainapp/base.html' %}
 {% load staticfiles %}
-{% block css %}
-    {{ block.super }}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/contact_style.css' %}">
-{% endblock %}
-{% block text_in_head %}
-    <div class="text_in_head">
-        <h1>Contact Us</h1>
-    </div>
-{% endblock %}
 {% block content %}
-    <div class="main">
-        <div class="information">
-            {% for i in list_info %}
-                <div class="main_info">
-                    <ul>
-                        <li><img src="{% static 'img/location.png' %}"></li>
-                        <li><h1>CALIFORNIA</h1></li>
-                        <li>
-                            <h3>Phone:</h3>
-                            <p>1900-1234-5678</p>
-                        </li>
-                        <li>
-                            <h3>Email:</h3>
-                            <p>info@interior.com</p>
-                        </li>
-                        <li>
-                            <h3>Addres:</h3>
-                            <p class="addres">12 W 1St. 90001 Los Angeles, Califonia</p>
-                        </li>
-                    </ul>
+    <br>
+    <div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 ">
+	        <form action="">
+                <div class="card border-success mb-3">
+{#		            <img class="card-img-top img-fluid"  src="{% static 'img/logo_email.png' %}" height="10%" width="10%">#}
+                    <div class="card-header text-center">
+		                <h1>Напишите нам</h1>
+                    </div>
+                    <div class="card-body">
+                        <div class="input-group mb-3">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">Ваше имя</span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="">
+                        </div>
+                        <div class="input-group mb-3">
+                            <input type="Email" class="form-control" placeholder="Ваш Email адрес">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">@example.com</span>
+                            </div>
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-append">
+                                <span class="input-group-text" id="basic-addon2">Тема сообщения</span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="">
+                        </div>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Ваш текст</span>
+                            </div>
+                            <textarea class="form-control" aria-label="With textarea"></textarea>
+                        </div>
+                        <br><button type="button" class="btn btn-success">Отправить</button>
+                    </div>
                 </div>
-            {% endfor %}
+	        </form>
         </div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <div class="card border-success mb-3">
+                <div class="card-header text-center">
+                    <h1>Адрес</h1>
+                </div>
+                <div class="card-body">
+                 <ul class="list-group">
+                     <li class="list-group-item"><p>Вы можете нам позвонить: 8 972 323 3234</p></li>
+                     <li class="list-group-item"><p>Мы находимся по адресу: Горд N, улица n-ская, дом 40</p></li>
+                     <li class="list-group-item"><p>Наш Email: raspberry_shop@shop.com</p></li>
+                 </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card border-success mb-3">
+                <iframe src="https://yandex.ru/map-widget/v1/-/CBRTYHSLcB" width="100%" height="374px" frameborder="1" allowfullscreen="true"></iframe>
+            </div>
+        </div>
+    </div>
     </div>
 {% endblock %}
