--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,103 +1,9 @@
 {% extends 'mainapp/base.html' %}
 {% load staticfiles %}
-{% block css %}
-    {{ block.super }}
-	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-{% endblock %}
-
-{% block text_in_head %}
-    <div class="text_in_head">
-        <h3> TRENDIND</h3>
-        <h1>FISHNET CHAIR</h1>
-        <p>Seat and back with upholstery made of cold cure foam. Steel frame,<br> avalible in matt power-coated black</p>
-        <a href="#">ORDER US</a>
-    </div>
-{% endblock %}
-
-{% block nav_pic %}
-    <div class="nav">
-        <img src="{% static 'img/navigation.png' %}">
-    </div>
-{% endblock %}
 
 {% block content %}
-    <div class="featured_product">
-        <a class="explore" href="#">Explore ALL</a>
-        <ul class="link_left">
-            <li><a href="#">Featured</a></li>
-            <li><a href="#">New</a></li>
-        </ul>
-        <div class="product">
-            <a href="#"><img src="{% static 'img/product-1.jpg' %}"></a>
-            <a href="#"><img src="{% static 'img/product-2.jpg' %}"></a>
-            <a href="#"><img src="{% static 'img/product-3.png' %}"></a>
-            <a href="#"><img src="{% static 'img/product-4.jpg' %}"></a>
-        </div>
-    </div>
-
-    <div class="promo_product">
-        <div class="promo_pic_1">
-            <h3>EXCLUSIVE</h3>
-            <h1>Fishnet Chair</h1>
-            <p>Seat and back with upholstery made of cold cure foam. Steel frame,<br> avalible in matt power-coated black</p>
-            <a href="#">ORDER US</a>
-        </div>
-        <div class="promo_pic_2">
-            <h3>EXCLUSIVE</h3>
-            <h1>Fishnet Chair</h1>
-            <p>Seat and back with upholstery made of cold cure foam. Steel frame,<br> avalible in matt power-coated black</p>
-            <a href="#">ORDER US</a>
-        </div>
-    </div>
-
-    <div class="trending_product">
-        <a class="explore_trend" href="#">Explore ALL</a>
-        <h1>Tranding Products</h1>
-        <ul>
-            <li><a href="#"><img src="{% static 'img/product-11.jpg' %}"></a></li>
-            <li><a href="#"><img src="{% static 'img/product-21.jpg' %}"></a></li>
-            <li><a href="#"><img src="{% static 'img/product-31.jpg' %}"></a></li>
-            <li><a href="#"><img src="{% static 'img/product-41.jpg' %}"></a></li>
-            <li><a href="#"><img src="{% static 'img/product-5.jpg' %}"></a></li>
-            <li><a href="#"><img src="{% static 'img/product-6.jpg' %}"></a></li>
-        </ul>
-			
-    </div>
-
-    <div class="hot_deals">
-        <div class="hot_d">
-            <h3>HOT DEAL</h3>
-            <h1>FISHNET CHAIR</h1>
-            <p>Seat and back with upholstery made of cold cure foam. Steel frame,<br> avalible in matt power-coated black</p>
-            <a href="#">ORDER US</a>
-            <img src="{% static 'img/navigation.png' %}">
-        </div>
-    </div>
-
-    <div class="exlusive_product">
-        <div class="exlusive_main_pic">
-            <h3>EXCLUSIVE</h3>
-            <h1>Fishnet Chair</h1>
-            <p>Seat and back with upholstery made of cold cure <br> foam. Steel frame, avalible in matt</p>
-            <a href="#">ORDER US</a>
-        </div>
-        <div class="exlusive_pic">
-            <ul>
-                <li><a href="#"><img src="{% static 'img/product-2-sm.jpg' %}"></a></li>
-                <li><a href="#"><img src="{% static 'img/product-3-sm.jpg' %}"></a></li>
-                <li><a href="#"><img src="{% static 'img/product-4-sm.jpg' %}"></a></li>
-                <li><a href="#"><img src="{% static 'img/product-5-sm.jpg' %}"></a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="mobile_app">
-        <div class="app_content">
-            <h3>MOBILE APP</h3>
-            <h1>FIND.FOLLOW.<br>FAVORITE.</h1>
-            <p>Save your favorites and share your style.</p>
-            <a href="#"><img src="{% static 'img/app-store.jpg' %}"></a>
-            <a href="#"><img src="{% static 'img/google-play.jpg' %}"></a>
-        </div>
-    </div>
+	<div class="container">	
+		<h2 align="center">Добро пожаловать!</h2>
+		<p align="center"><p class="text-justify">Уважаемый посетитель, рад приветствовать Вас в нашем интернет магазине. У нас Вы сможете приобрести любую интересующию Вас версию платы Raspberry Pi, а так же найти большое количество информации по ней, от описания платы, до стартовых проектов</p>
+	</div>
 {% endblock %}
