Добавил Базу данных Добавил админку

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,46 @@ body{
 .my_nav li{
 	padding-left: 2em;
 }
+.menu li{
+	list-style-type: none;
+	background-color: #4CAF50;
+	border-radius: 5px;
+	text-decoration-color: #fff;
+	padding: 16px 10px;
+	text-align: center;
+	display: inline-block;
 
+}
+.menu a{
+	text-decoration: none;
+  	color: #fff;
+	width: 200px;
+	display: block;
+	height: 20px;
+}
+.menu a:hover:before{
+	content: " ";
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	background: url(img/pi_logo.png) no-repeat;
+    background-size: 14px 14px;
+}
+.menu a:hover:after{
+	content: " ";
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	background: url(img/pi_logo.png) no-repeat;
+    background-size: 14px 14px;
+}
+.menu li:hover{
+  background-color: #d6254f;
+}
+.container{
+	width: 100%;
+	margin: 0 auto;
+}
 h2{
 	color: #000;
 	font-size: 18px;
@@ -48,7 +87,108 @@ h2{
 .parametr td:nth-child(2n){
 	text-align: right;
 }
+.user_name, .user_email, .user_topic, textarea{
+	width: 70%;
+	padding: 6px 10px;
+	border: 2px solid #ccc;
+	font-size: 16px;
+	text-transform: capitalize;
+}
+.catalog{
+	width: 90%;
+	margin: 0 auto;
+}
+.catalog a{
+	text-decoration: none;
+	text-align: center;
+}
+.goods_1, .goods_2, .goods_3{
+	display: inline-block;
+}
+textarea{
+	height: 150px;
+	resize: none;
 
+}
+.send_button, .button_prod, .button_buy{
+	width: 200px;
+	border-radius: 5px;
+	color: white;
+	padding: 16px 32px;
+	text-decoration: none;
+	margin: 4px 2px;
+	text-align: center;
+}
+.button_prod{
+	background-color: #4CAF50;
+}
+.send_button{
+	background-color: #d6254f;
+}
+.button_prod:hover{
+	background-color: #d6254f;
+}
+.send_button:hover{
+	border-color: #4CAF50;
+}
+.user_email:focus{
+	background-color: #4CAF50;
+	color: #fff;
+
+}
+.user_name:focus{
+	background-color: #4CAF50;
+	color: #fff;
+}
+.user_topic:focus{
+	background-color: #4CAF50;
+	color: #fff;
+}
+.feedback{
+	background-color: #4CAF50;
+	text-align: center;
+	width: 30%;
+	border-radius: 15px;
+
+	margin: 0 auto;
+	color: #fff;
+}
+.logo_email{
+	width: 80px;
+	height: 50px;
+	margin: 0 auto;
+}
+.footer{
+	width: 90%;
+	height: 70px;
+	margin: 0 auto;
+	position: relative;
+	background-color: #eaeaea;
+}
+.footer {}
+
+.fa-github, .fa-telegram, .fa-google-plus, .fa-vk{
+	font-size: 2.2em;
+	padding-left: 1em;
+	color:#000;
+}
+.fa-github:hover{
+	color:#fff !important;
+}
+.fa-telegram:hover{
+	color:#fff;
+}
+.fa-google-plus:hover{
+	color:#fff;
+}
+.fa-vk:hover{
+	color:#fff;
+}
+.content_text{
+	width: 90%;
+	margin: 0 auto;
+
+}
 
 .goods_small_descr {
 	display: inline-block;	
