--- a/mainapp/templates/mainapp/product.html
+++ b/mainapp/templates/mainapp/product.html
@@ -1,16 +1,23 @@
 {% extends 'mainapp/base.html' %}
 {% load staticfiles %}
 {% block content %}
-    <div class="container-fluid">
-	<div class="row">
-        {% for list_img in list_img %}
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-			<a href="Raspberry_pi_3_B.html">
-				<img src="{% static  list_img.href %}"><br>
-                <a href="#" class="btn btn-outline-success btn-lg" role="button" aria-pressed="true">{{ list_img.name }}</a>
-			</a>
-		</div>
+    <div class="container">
+    <div class="row">
+        <div class="card-deck">
+        {% for prod in products %}
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <div class="card border-success mb-3 text-center" style="width: 14rem;">
+                <div class="text-center">
+                    <img src="/media/{{ prod.image }}" class="card-img-top rounded" style="width: 150px; height: 150px;" alt="...">
+                    <div class="card-body">
+{#                    <p class="card-text">{{ prod.description }}</p>#}
+                        <a href="#" class="btn btn-outline-success btn-lg" role="button" aria-pressed="true">{{ prod.name }}</a>
+                    </div>
+                </div>
+            </div>
+            </div>
         {% endfor %}
-		</div>
+        </div>
 	</div>
+    </div>
 {% endblock %}
