Добавил форму для входа Заполнил JSON файлы для формирования начальной БД Добавил индификацию пользователя

--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -2,8 +2,13 @@
 {% load staticfiles %}
 
 {% block content %}
-	<div class="container">	
-		<h2 align="center">Добро пожаловать!</h2>
+	<div class="container">
+        {% if user.is_authenticated %}
+            <h2 align="center">Добро пожаловать! {{ user.username}}</h2>
+        {% else %}
+            <h2 align="center">Добро пожаловать!</h2>
+        {% endif %}
+
 		<p align="center"><p class="text-justify">Уважаемый посетитель, рад приветствовать Вас в нашем интернет магазине. У нас Вы сможете приобрести любую интересующию Вас версию платы Raspberry Pi, а так же найти большое количество информации по ней, от описания платы, до стартовых проектов</p>
 	</div>
 {% endblock %}
