--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -38,6 +38,24 @@
                                 </a>
                             </li>
                         {% endfor %}
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a href="" class="nav-link">
+
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{% url  'auth:logout'%}" class="nav-link">
+                                    Выйти
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a href="{% url 'auth:login' %}" class="nav-link">
+                                    Войти
+                                </a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
