Добавил страницу регистрации Добавил страницу редактирования Добавил отображение аватарки Добавил стандартную аватарку Стилизовал формы(регистрации,редактирования,входа)

--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -19,7 +19,7 @@
                             <input type="text" class="form-control" placeholder="">
                         </div>
                         <div class="input-group mb-3">
-                            <input type="Email" class="form-control" placeholder="Ваш Email адрес">
+                            <input type="Email" class="form-control" value="{{ user.email }}">
                             <div class="input-group-append">
                                 <span class="input-group-text" id="basic-addon2">@example.com</span>
                             </div>
