--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 	<div class="container">
         {% if user.is_authenticated %}
-            <h2 align="center">Добро пожаловать! {{ user.username}}</h2>
+            <h2 align="center">Добро пожаловать, {{ user.username }}!</h2>
         {% else %}
             <h2 align="center">Добро пожаловать!</h2>
         {% endif %}
