Внёс поправки в отображение форм auth

--- a/authapp/templates/authapp/edit.html
+++ b/authapp/templates/authapp/edit.html
@@ -2,9 +2,7 @@
 {% load staticfiles %}
 
 
-{% block content %}
-    <div class="container">
-    <br>
+{% block content_auth %}
     <form class="form-horizontal" action="{% url 'auth:edit' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ edit_form.as_p }}
@@ -14,9 +12,5 @@
         <a href="{% url 'main' %}" class="">
             на главную
         </a>
-
     </button>
-{#    <div class="user_avatar"><img src="/media/{{ user.avatar }}"></div>#}
-
-    </div>
 {% endblock %}
