--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -1,15 +1,11 @@
 {% extends 'authapp/base.html' %}
 {% load staticfiles %}
 
-{% block content %}
-    <div class="container">
-    <br>
+{% block content_auth %}
     <form class="form-horizontal" action="{% url 'auth:register' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ register_form.as_p }}
         <br>
         <button class="btn btn btn-success form-control" type="submit" value="зарегистрироваться">Зарегистрироваться</button>
     </form>
-    <br>
-    </div>
 {% endblock %}
