--- a/mainapp/templates/mainapp/products_list.html
+++ b/mainapp/templates/mainapp/products_list.html
@@ -1,14 +1,22 @@
 {% extends 'mainapp/base.html' %}
 {% load staticfiles %}
+
+
 {% block content %}
     {% include 'mainapp/includes/inc_categories_menu.html' %}
-    <div class="container">
-        <div class="row">
+    <div class="products_list">
+        <div class="title clearfix">
+            <h2>
+                Категория: "{{ category.name|title }}"
+            </h2>
+        </div>
+        <div class="container">
             <div class="card-deck">
-                {% for prod in list_products %}
+                {% for prod in products %}
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                         <br>
                         <div class="card border-success mb-3 text-center" style="width: 14rem;">
+                            <a href="{% url 'basket:add' prod.pk %}">
                             <div class="text-center">
                                 <img src="/media/{{ prod.image }}" class="card-img-top rounded"
                                      style="width: 150px; height: 150px;" alt="...">
@@ -18,10 +26,12 @@
                                        aria-pressed="true">{{ prod.name }}</a>
                                 </div>
                             </div>
+                            </a>
                         </div>
                     </div>
                 {% endfor %}
             </div>
         </div>
+    </div>
     </div>
 {% endblock %}
