--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -57,6 +57,16 @@
                             Выйти
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">
+                            Корзина (общая сумма заказа: {{ price_all }}. руб)
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">
+                            (общее количество товаров: {{ quantity_all }} шт)
+                        </a>
+                    </li>
                 {% else %}
                     <li class="nav-item">
                         <a href="{% url 'auth:login' %}" class="nav-link">
