--- a/mainapp/templates/mainapp/includes/inc_categories_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_categories_menu.html
@@ -6,7 +6,7 @@
     </li>
     <li class="nav-item">
         <a href="{% url 'product:category' 0 %}"
-           class="nav-link {% if request.resolver_match.kwargs.pk == '0' %}
+           class="nav-link {% if request.resolver_match.kwargs.pk == 0 %}
                 active
               {% endif %}">
             Все
