Выполнил задания 7 урока Поэксперементировал со встроенной админкой Добавил форму отправки сообщений(обратная связь)

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -76,6 +76,11 @@
                         </a>
                     </li>
                 {% endif %}
+                {% if user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin_custom:users' %}">Админка</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
